<resources>
    <!-- app name -->

    <string name="app_name" translatable="false">veesy</string>

    <!-- just image descriptions -->

    <string name="share" translatable="false">Share</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="home" translatable="false">Home</string>
    <string name="details" translatable="false">Details</string>
    <string name="pairing" translatable="false">Pairing...</string>
    <string name="shut_down">shut down</string>
    <string name="image">Image</string> <!-- Standartbildbeschreibung (Personenbilder)-->
    <string name="animation">Animation</string>
    <string name="delete">Delete</string>
    <string name="safe">Safe</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="data_transmission_success" translatable="false">Data transmission success</string>
    <string name="data_transmission_failure" translatable="false">Data transmission failure</string>
    <string name="cancel">Cancel</string>
    <string name="background">Background</string>

    <!-- settings -->

    <string name="my_card">My Card</string>
    <string name="remove_devices">Remove Devices</string>
    <string name="about_us">About Us</string>
    <string name="introduction">Introduction</string>

    <!-- informations -->

    <string name="success">Success!</string>
    <string name="failure">Failed!</string>
    <string name="devies_removed">Devices removed</string>
    <string name="fill_out_your_card_please">Please fill your card first. It saves automatically.</string>
    <string name="delete_question">Really delete</string>
    <string name="shutdown">Shutdown…</string>

    <!-- contact details -->

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="mail">Email address</string>
    <string name="occupation">Occupation</string>
    <string name="company">Company</string>
    <string name="website" translatable="false">Website</string>
    <string name="address">Address</string>
    <string name="business_area">Business area</string>
    <string name="birthday">Birthday</string>
    <string name="hobbies">Hobbies</string>

    <!-- errors -->

    <string name="error_safe_contact">Can\'t save contact</string>
    <string name="delete_contact_error">Can\'t delete contact</string>
    <string name="no_device_found">No device found. Please search again!</string>
    <string name="no_first_name">No first name</string>
    <string name="no_last_name">No last name</string>
    <string name="not_paired">Restart searching or pair now</string>
    <string name="bluetooth_permission_denied">For sharing contacts bluetooth is required</string>

    <!-- introduction -->

    <string name="tab1" translatable="false">tab1</string>
    <string name="tab2" translatable="false">tab2</string>
    <string name="tab3" translatable="false">tab3</string>
    <string name="tab4" translatable="false">tab4</string>
    <string name="intro_tab_1_info_text">Welcome to veesy</string>
    <string name="intro_tab_2_info_text">Create your own business card</string>
    <string name="intro_tab_3_info_text">Manage all your contacts right on your watch</string>
    <string name="intro_tab_4_info_text">Exchange contact information easily with a handshake</string>
    <string name="intro_tab_4_button_text">Show me!</string>

    <!-- about us -->

    <string name="app_slogan">With veesy it\'s easy!</string>
    <string name="title_1">WHO WE ARE …</string>
    <string name="title_2">THE TEAM</string>
    <string name="about_text">We are four students from Augsburg, Germany. We are part of a master
        course called Interactive Media Systems with focus on mobile experience at the University
        of applied sciences Augsburg. \n\nThis project was developed as part of our master project
        and started in early 2017.</string>
    <string name="vivi" translatable="false">Vivien Bardosi</string>
    <string name="daniel" translatable="false">Daniel Fritsch</string>
    <string name="tianyi" translatable="false">Tianyi Zhang</string>
    <string name="martin" translatable="false">Martin Stadlmaier</string>
    <string name="degree">Degree</string>
    <string name="uni">University</string>
    <string name="team_member_slogan">Slogan</string>

    <!-- Neue Textfelder werden automatisch hier drunter eingefügt -->
    <string name="neue_felder">Neue Felder</string>
</resources>
