<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/feedback_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_feedback"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/data_transmission_failure"
            android:scaleType="fitCenter"
            android:src="@drawable/feedback_failed_img" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto_condensed_regular"
            android:text="@string/failure"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/bShare"
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/details"
        android:onClick="bShareClicked"
        android:scaleType="fitCenter"
        android:src="@drawable/share_button_mini" />

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/home"
        android:onClick="bHomeClicked"
        android:scaleType="fitCenter"
        android:src="@drawable/home_button" />
</RelativeLayout>