<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/team_member_details_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/contacts_show_background"
    android:fadingEdgeLength="30dp"
    android:requiresFadingEdge="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">

        <ImageView
            android:id="@+id/member_img"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/image"
            android:src="@drawable/about_daniel" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:fontFamily="@font/roboto_condensed_regular"
                android:gravity="center"
                android:text="@string/first_name"
                android:textColor="#0ba29a"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:fontFamily="@font/roboto_condensed_regular"
                android:gravity="center"
                android:text="@string/last_name"
                android:textColor="#0ba29a"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/occupation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="3dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:contentDescription="@string/phone"
                    android:src="@drawable/about_job" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/tOccupation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/roboto_condensed_regular"
                    android:text="@string/occupation"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/degree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="3dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:contentDescription="@string/phone"
                    android:src="@drawable/about_degree" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/tDegree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/roboto_condensed_regular"
                    android:text="@string/degree"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/uni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="3dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:contentDescription="@string/phone"
                    android:src="@drawable/about_uni" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/tUni"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/roboto_condensed_regular"
                    android:text="@string/uni"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </FrameLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tSlogan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:text="@string/team_member_slogan"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="italic" />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="35dp"
            android:background="?android:selectableItemBackgroundBorderless"
            android:contentDescription="@string/safe"
            android:onClick="bReturnClicked"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:scaleType="fitCenter"
            android:src="@drawable/button_return" />
    </LinearLayout>
</ScrollView>