<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/contacts_show_background"
    android:fadingEdgeLength="30dp"
    android:paddingEnd="15dp"
    android:paddingStart="15dp"
    android:requiresFadingEdge="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/image"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/app_name"
                    android:textColor="#0ba29a"
                    android:textSize="30sp" />
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/app_slogan"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="italic" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@android:color/transparent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_1"
            android:textColor="#0ba29a"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@android:color/transparent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/about_text"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@android:color/transparent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/title_2"
            android:textAlignment="center"
            android:textColor="#0ba29a"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="65dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/image"
                    android:onClick="bViviClicked"
                    android:src="@drawable/about_vivi" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="65dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/image"
                    android:onClick="bMartinClicked"
                    android:src="@drawable/about_martin" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="65dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/image"
                    android:onClick="bDanielClicked"
                    android:src="@drawable/about_daniel" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="65dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/image"
                    android:onClick="bTianyiClicked"
                    android:src="@drawable/about_tianyi" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@android:color/transparent" />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?android:selectableItemBackgroundBorderless"
            android:contentDescription="@string/safe"
            android:onClick="bReturnClicked"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:scaleType="fitCenter"
            android:src="@drawable/button_return" />
    </LinearLayout>
</ScrollView>